# magali

./: .gitignore  AUTHORS.md  LICENSE.txt  Makefile  README.md  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: docs.yml  pypi.yml  style.yml  test.yml
dev/: .buildinfo  changes.html  citing.html  compatibility.html  genindex.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  references.html  search.html  searchindex.js  versions.html
dev/_modules/: index.html
dev/_modules/magali/: _detection.html  _input_output.html  _inversion.html  _io.html  _synthetic.html  _utils.html  _visualization.html
dev/_sources/: changes.rst  citing.rst  index.rst  install.rst  overview.rst  versions.rst
dev/_sources/api/: index.rst
dev/_sources/tutorial/: creating_synthetic_data.rst  detecting_sources.rst  loading_dataset.rst
dev/api/: index.html
dev/tutorial/: creating_synthetic_data.html  detecting_sources.html  loading_dataset.html
doc/: citing.rst  compatibility.rst  conf.py  index.rst  install.rst  overview.rst  references.rst
doc/api/: index.rst
doc/tutorial/: creating_synthetic_data.rst  detecting_sources.rst  loading_dataset.rst
doc/user_guide/: souza_junior_method.rst
env/: requirements-docs.txt  requirements-style.txt  requirements-test.txt
magali/: __init__.py  _constants.py  _detection.py  _input_output.py  _inversion.py  _io.py  _statistics.py  _stereogram_projection.py  _stereograms.py  _synthetic.py  _utils.py  _version.py  stereogram_projection.py  temporary.ipynb
magali/Temporary/: tmp.ipynb
magali/temporary/: temporary.ipynb  tmp.ipynb
magali/temporay/: tmp.ipynb
magali/tests/: __init__.py  conftest.py  test_detection.py  test_inversion.py  test_io.py  test_synthetic.py  test_utils.py  test_validation.py
src/magali/: __init__.py  _detection.py  _forward.py  _input_output.py  _inversion.py  _stats.py  _synthetic.py  _units.py  _utils.py  _validation.py  _visualization.py  tmp.ipynb
src/magali/temporary/: compare_linear_inversion.ipynb  from_scratch.ipynb  iterative_inversion.ipynb  micromag.py  nonlinear_position_inversion.ipynb  tmp.ipynb
test/: conftest.py  models.py  test_detection.py  test_inversion.py  test_io.py  test_synthetic.py  test_units.py  test_utils.py  test_validation.py  test_visualization.py
tmp/: stereoplot_tmp.ipynb  tmp_test.ipynb
