[project]
name = "magali"
description = "Modeling and inversion of magnetic microscopy data"
dynamic = ["version"]
authors = [
  {name="The Magali Developers", email="fatiandoaterra@protonmail.com"},
]
maintainers = [
  {name = "Leonardo Uieda", email = "leo@uieda.com"},
]
readme = "README.md"
license = {text = "BSD 3-Clause"}
keywords = ["magnetism", "microscopy", "geophysics", "paleomagnetism"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "scikit-image>=0.20",
    "xarray>=2022.6.0",
    "harmonica>=0.7",
    "verde>=1.8.1",
    "choclo>=0.2.0",
    "ensaio>=0.7.0",
]

[project.urls]
"Documentation" = "https://www.fatiando.org/magali"
"Changelog" = "https://www.fatiando.org/magali/latest/changes.html"
"Bug Tracker" = "https://github.com/fatiando/magali/issues"
"Source Code" = "https://github.com/fatiando/magali"

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme =  "post-release"
local_scheme =  "no-local-version"
write_to =  "magali/_version_generated.py"

# Make sure isort and Black are compatible
[tool.isort]
profile = "black"
multi_line_output = 3

[tool.burocrata]
notice = '''
# Copyright (c) 2024 The Magali Developers.
# Distributed under the terms of the BSD 3-Clause License.
# SPDX-License-Identifier: BSD-3-Clause
#
# This code is part of the Fatiando a Terra project (https://www.fatiando.org)
#'''
